# grass-rs

./: Cargo.toml  build.rs
assets/: cube.gltf
shaders/: cube.frag  cube.vert  depth_display.frag  depth_display.vert  descriptor_set.glsl  descriptor_set_common.glsl  descriptor_set_meshlet.glsl  descriptor_set_traditional.glsl  grid.frag  grid.vert  meshlet.frag  meshlet.mesh  meshlet.task  meshlet_common.glsl  skybox.frag  skybox.vert  triangle.vert
src/: app.rs  bindless_descriptor_set.rs  cube.rs  depth_map_display_pipeline.rs  dir_light.rs  drawable.rs  fps_window.rs  grid.rs  gui.rs  gui_scene_node.rs  main.rs  overlay_drawable.rs  push_constants.rs  skybox.rs  vkutils.rs
src/assets/: asset.rs  gltf_asset.rs  mesh.rs  meshlet.rs  meshlet_asset.rs  mod.rs  node.rs  primitive.rs  scene.rs  scene_nodes.rs  traditional_asset.rs
src/camera/: mod.rs  projection.rs  view.rs
src/camera/movement/: arcball.rs  fps.rs  mod.rs
src/cube/: mod.rs
src/gltf_loader/: mod.rs
src/mesh/: mesh_data.rs  mod.rs
src/renderer/: depth_map_render.rs  meshlet_render.rs  mod.rs  scene_render.rs  target_render_picker.rs
src/vkutils/: buffer.rs  command_pool.rs  context.rs  debug_utils.rs  descriptor_set.rs  device.rs  device_memory.rs  device_queue.rs  fence.rs  image.rs  instance.rs  mod.rs  physical_device.rs  push_constants.rs  sampler.rs  swapchain.rs  timestamp_query.rs
src/vkutils_new/: buffer.rs  command_pool.rs  context.rs  descriptor_set.rs  image.rs  instance.rs  mod.rs  pipeline.rs  push_constants.rs  semaphore.rs  swapchain.rs  vk_destroy.rs
(+10 files in other folders)
