[package]
name = "grass-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.5"
ash = "0.38.0"
ash-window = "0.13.0"
nalgebra-glm = "0.19.0"
bitflags = "2.4.2"
imgui-rs-vulkan-renderer = { version = "1.16.0" }
imgui = "0.12"
imgui-winit-support = "^0.13"
stb_image_rust = "2.27.2"
